--- a/src/app/components/board/player-indicator/player-indicator.component.scss
+++ b/src/app/components/board/player-indicator/player-indicator.component.scss
@@ -1,44 +1,1 @@
-.status-panel {
-  position: relative;
-  margin-top: -40px; /* 🔥 overlap the board */
-  padding: 48px var(--space-md) var(--space-lg);
-  background: var(--color-board);
-  display: flex;
-  justify-content: center;
-  height:500px;
-  border-radius: var(--radius-lg) var(--radius-lg) 0 0;
-  z-index: -1
-}
 
-img {
-  position: absolute;
-  top: 16%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 40%;
-  z-index: 10;
-}
-
-.turn-label {
-  position: absolute;
-  top: 13%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 150;
-  font-size: 0.8rem;
-  font-weight: lighter;
-  color: black;
-  z-index: 11;
-}
-
-.turn-timer {
-  position: absolute;
-  top: 18%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 150;
-  font-size: 2rem;
-  font-weight: bold;
-  color: black;
-  z-index: 11;
-}
